# adaptemoji

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/: demo.rs
src/: cli.rs  lib.rs  main.rs
