[package]
name = "adaptemoji"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Aleksei Rybin <0xalekseirybin@gmail.com>"]
description = "Convert your regular Telegram emojis into adaptive monochrome versions"
keywords = ["image", "telegram", "emoji", "terminal", "cli"]
license = "MIT"

# Don't forget to update `.github/workflows/test.yml`
rust-version = "1.74"

documentation = "https://docs.rs/adaptemoji"
repository = "https://github.com/adaptemoji/adaptemoji"
homepage = "https://github.com/adaptemoji/adaptemoji"
categories = [
    "command-line-utilities",
    "multimedia",
    "multimedia::images",
    "multimedia::video",
    "visualization",
]
exclude = ["assets/*", ".github/*", "examples/*"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
